@@ -1,3 +1,5 @@
+=== (next) ===
+FIXED: missing response handling from onMessage()
 
 === 0.1.0 (2020-01-08) ===
 Initial release
